--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
+            background-attachment: fixed;
 
 
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -37,6 +38,11 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga possimus odio voluptatibus libero! Distinctio beatae ea nam fugiat sapiente quis, incidunt perferendis, illo dolore unde temporibus error facere molestiae repellat?</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, atque culpa soluta dolore harum accusantium dolor ut voluptatibus deleniti impedit nostrum, voluptate suscipit perferendis vero at praesentium. Asperiores, cum reprehenderit?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, atque quas. Aspernatur ad repellat quaerat fugiat nihil labore veritatis exercitationem illum, voluptas voluptates? Molestias, expedita nostrum animi dolorem debitis ratione.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur aut temporibus, numquam dolorem facilis, atque ipsum sunt blanditiis quibusdam accusantium illum tempore id perspiciatis earum laudantium aperiam assumenda quidem ut.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi natus repellat minus mollitia iure officiis dolore quas eaque, quibusdam nemo cum dolorem dolores? Tempora ipsa voluptatibus rerum voluptatum delectus provident.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum sapiente numquam rem vero. Ut aspernatur praesentium quos doloremque libero perspiciatis nihil enim obcaecati sit cum, quae accusantium nulla rerum minima!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error veritatis illum consequatur iure quae nobis vel aperiam exercitationem dolorum? Magnam fugiat eos quae autem vero nam nulla blanditiis cupiditate.</p>
+
 
     </main>
 </body>
